<resources>
    <string name="app_name">Myzo</string>
    <string name="all_accounts">All Accounts</string>
    <string name="total_balance_0_00">Total balance: 0.00</string>
    <string name="add_account">+ Account</string>
    <string name="analytics">Analytics</string>
    <string name="viewing">Viewing:</string>
    <string name="nov_2020">Nov 2020</string>
    <string name="left_bracket">(</string>
    <string name="change">change</string>
    <string name="right_bracket">)</string>
    <string name="back">back</string>
    <string name="all_categories">All Categories</string>
    <string name="add_category">+ Category</string>
    <string name="analysis">Analysis</string>
    <string name="categories">Categories</string>
    <string name="backup">Backup</string>
    <string name="switch_accounts">Switch accounts</string>
    <string name="main_account">Main Account</string>
    <string name="balance_0_00">Balance: 0.00</string>
    <string name="add_transaction">+ Transaction</string>
    <string name="default_category">Default \ncategory</string>
    <string name="select_transaction_date">Select transaction date</string>
    <string name="add_account_non_plus">Add Account</string>
    <string name="add_category_non_plus">Add Category</string>
    <string name="add_transaction_for">Add Transaction for</string>
    <string name="add">Add</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_warning">Are you sure want to delete this account?</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_category_warning">Are you sure want to delete this category? \n\nAny transactions under this category will be reverted to \'Other\'.</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="delete_transaction_warning">Are you sure want to delete this transaction?</string>
    <string name="delete">Delete</string>
    <string name="update_account">Update Account</string>
    <string name="name">Name</string>
    <string name="update_category">Update Category</string>
    <string name="title">Title</string>
    <string name="update_transaction_for">Update Transaction for</string>
    <string name="today">today</string>
    <string name="income">Income</string>
    <string name="expenditure">Expenditure</string>
    <string name="amount">Amount</string>
    <string name="note">Note</string>
    <string name="update">Update</string>
    <string name="select_month_to_view">Select month to view</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="category_note">category note</string>
    <string name="permission_denied_info">If permission is denied, it can be granted again in your phone settings.</string>
    <string name="export_warning">This will wipe the current backup data and replace with the current app data. Please ensure the current app data is correct, or make your own copies of the backup data before exporting.</string>
    <string name="confirm_export">Confirm export</string>
    <string name="confirm_import">Confirm import</string>
    <string name="import_warning">This will wipe the current data and replace with the backup data. Please ensure the backup data is correct before importing.</string>
    <string name="about">About</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="terms_of_use_title">Terms of Use</string>
    <string name="send_an_email">Send an email</string>
    <string name="about_text">Myzo is a personal finance tracker that allows you to record your income and expenditure over time, add custom accounts, categories and export / import your data locally. \n\nSpudg Studios is currently a one-man development studio and this is an early version of the application, so if you have any suggestions or you\'ve found a bug, please send an email below!</string>
    <string name="copyright">Copyright © 2020 Spudg Studios</string>
    <string name="all_rights_reserved">All rights reserved. By using this application, you agree that the creator of this application is not responsible for any losses or damages.</string>
    <string name="licensed_apache_2_0">Licensed under the Apache License 2.0</string>
    <string name="done">Done</string>
    <string name="philjay_mpandroidchart">PhilJay/MPAndroidChart</string>
    <string name="opencsv_opencsv">opencsv/opencsv</string>
    <string name="larswerkman_holocolorpicker">larswerkman/HoloColorPicker</string>
    <string name="google_material_design_icons">google/material-design-icons</string>
    <string name="steve_matteson_open_sans_light_font">Steve Matteson / Open Sans Light font</string>
    <string name="v1_0_0_made_by_spudg_studios">v1.0.0, made by Spudg Studios</string>
    <string name="myzo">Myzo</string>
    <string name="about_myzo">About Myzo</string>
    <string name="myzo_logo">Myzo Logo</string>
    <string name="more">More</string>
    <string name="accounts">Accounts</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="no_transaction_text">No transactions added. Press \'+ TRANSACTION\' to get started! \n\nWhen you\'ve added transactions, press \'More\' then \'Analytics\' to see a visualisation of your data. \n\nYou can also add custom categories other than the default ones provided - such as \'Salary\' or \'Dividends\'.</string>
    <string name="recurring">Recurring</string>
    <string name="add_recurring">+ Recurring</string>
    <string name="recurring_transactions">Recurring\nTransactions</string>
    <string name="add_recurring_transaction_for">Add Recurring Transaction for</string>
    <string name="update_recurring_transaction_for">Update Recurring Transaction for</string>
    <string name="delete_recurring_transaction">Delete recurring transaction</string>
    <string name="delete_recurring_waring">Are you sure you want to delete this recurring transaction?</string>
    <string name="next_posting_date_placeholder">Next posting date: 07/12/2022</string>
    <string name="account">Account</string>
    <string name="frequency">Frequency</string>
    <string name="rate_on_play_store">Rate on Play Store</string>
    <string name="export_import_explain">Export to or import from a backup folder, containing CSV files for your transactions, categories and accounts.</string>
    <string name="import_btn">Import</string>
    <string name="export_btn">Export</string>
    <string name="last_export_never">Last export: Never</string>
    <string name="no_recurring_desc">No recurring transactions added yet. Press the button below to add your first!</string>
    <string name="version_by_ss">v%1$s, made by Spudg Studios</string>
    <string name="account_balance">Balance: %1$s</string>
    <string name="total_account_balance">Total balance: %1$s</string>
    <string name="month_header">%1$s %2$s</string>
    <string name="day_month_year">%1$s %2$s %3$s</string>
    <string name="error">Error</string>
    <string name="last_backup_date">Last backup: %1$s</string>
    <string name="backups_exported_to_imported_from">Backups will be exported to and imported from %1$s/SMMBackups.</string>
    <string name="next_posting_date">Next posting date: %1$s</string>
    <string name="amount_transfer">Amount</string>
    <string name="transfer_between_accounts">Transfer between accounts</string>
    <string name="transfer_between_accounts">Transfer between accounts</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="with_category">With category</string>
    <string name="transfer">Transfer</string>
</resources>