<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_solid"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/update_recurring_transaction_for"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/change_date_update_recurring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/today"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>


    <RadioGroup
        android:id="@+id/inc_exp_radio_group_recurring_update"
        style="?attr/radioButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/income_radio_recurring_update"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:fontFamily="@font/open_sans_light"
            android:gravity="center"
            android:text="@string/income"
            android:textSize="16sp" />


        <RadioButton
            android:id="@+id/expenditure_radio_recurring_update"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/radio_selector"
            android:checked="false"
            android:fontFamily="@font/open_sans_light"
            android:gravity="center"
            android:text="@string/expenditure"
            android:textSize="16sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/category_dropdown_layout_recurring"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="10"
            android:background="@drawable/dropdown_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="@id/etAmountLayout"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/category_spinner_update_trans_recurring"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimaryDark"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etAmountLayoutRecurring"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etAmountRecurring"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/open_sans_light"
                android:hint="@string/amount"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNoteLayoutUpdateRecurring"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNoteUpdateRecurring"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_light"
            android:hint="@string/note"
            android:inputType="text"
            android:maxLength="48"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etFrequencyLayoutUpdate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFrequencyUpdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_light"
            android:hint="@string/note"
            android:inputType="text"
            android:maxLength="48"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUpdateRecurring"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_light"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/update"
            android:textColor="#673AB7" />

        <TextView
            android:id="@+id/tvCancelRecurring"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_light"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@android:color/black" />

    </LinearLayout>
</LinearLayout>