<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountsActivity">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <Button
                android:id="@+id/back_to_trans_from_about"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="#FFFFFF"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/back"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/category_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/open_sans_light"
                android:text="About SMM"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/back_to_trans_from_about"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/back_to_trans_from_about" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintVertical_weight="4">

            <LinearLayout
                android:id="@+id/logo_title_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp">

                <ImageView
                    android:id="@+id/smm_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/ic_launcher"
                    android:layout_gravity="center" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                        android:id="@+id/spudg_money_manager_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_gravity="left"
                        android:textSize="20sp"
                        android:text="Spudg Money Manager"
                        android:padding="6dp"
                        android:fontFamily="@font/open_sans_light"/>

                    <TextView
                        android:id="@+id/spudg_money_manager_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_gravity="left"
                        android:paddingLeft="10dp"
                        android:textSize="16sp"
                        android:text="v1.0.0, made by Spudg Software"
                        android:fontFamily="@font/open_sans_light"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/about_text"
                app:layout_constraintTop_toBottomOf="@id/logo_title_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                android:text="@string/about_text"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:fontFamily="@font/open_sans_light"/>

            <!--

            <TextView
                android:id="@+id/privacy_policy"
                app:layout_constraintTop_toBottomOf="@id/about_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:foreground="?attr/selectableItemBackground"
                android:textSize="16sp"
                android:text="@string/privacy_policy_title"
                android:padding="10dp"
                android:fontFamily="@font/open_sans_light"/>

            -->

            <TextView
                android:id="@+id/terms_of_use"
                app:layout_constraintTop_toBottomOf="@id/about_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/email_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:padding="10dp"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans_light"
                android:textColor="@color/colorAccent"
                android:text="@string/terms_of_use_title"/>

            <TextView
                android:id="@+id/email_btn"
                app:layout_constraintTop_toBottomOf="@id/terms_of_use"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:textSize="16sp"
                android:padding="10dp"
                android:fontFamily="@font/open_sans_light"
                android:textColor="@color/colorAccent"
                android:text="@string/send_an_email"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>

